Update changelog for new release

--- a/changelog
+++ b/changelog
@@ -1,6 +1,12 @@
 Kilt changelog
 ==============
 
+Version 1.0.2 - 2024-01-27
+--------------------------
+
+ - Update all 3rd-party dependencies (no functional changes)
+
+
 Version 1.0.1 - 2020-01-20
 --------------------------
 
