--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -5,7 +5,7 @@ Thanks for your interest in contributing to Kilt.
 == How to contribute
 
 If you intent to do larger changes it is advisable to open an
-https://github.com/hupfdule/kilt/issues[Issue] issue first, describing the
+https://github.com/poiu-de/kilt/issues[Issue] issue first, describing the
 problem and the intentions. This helps reducing wasted effort and
 duplicated work by allowing This helps avoiding duplicate work or your
 changes being refused for some reason.  to discuss the change first.
@@ -24,7 +24,7 @@ welcome.
 === Finding bugs
 
 Of course Kilt has bugs. If you find them please file an
-https://github.com/hupfdule/kilt/issues[Issue] so they can be resolved.
+https://github.com/poiu-de/kilt/issues[Issue] so they can be resolved.
 
 Preparing pull request to solve issues is also highly welcome, of course.
 
