Don’t try to build documentation
The documentation was moved to a separate project that combines all poiu
projects.

--- a/README.adoc
+++ b/README.adoc
@@ -12,8 +12,8 @@ Marco Herrn <marco@mherrn.de>
 
 [.float-group]
 --
-image:docs/kilt-icon.svg[Kilt - **K**ilt **I**18n, **L**10n and **T**9n,
-role="right", width="75"]
+image:kilt-wide.svg[Kilt - **K**ilt **I**18n, **L**10n and **T**9n, role="right", width="75"]
+
 **K**ilt **I**18n **L**10n and **T**9n
 
 Easier handling of Java i18n resource bundles.
